# InsightFlow

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/newsscraper/: crew.py  main.py
src/newsscraper/config/: agents.yaml  tasks.yaml
