[project]
name = "newsscraper"
version = "0.1.0"
description = "NewsScraper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
newsscraper = "newsscraper.main:run"
run_crew = "newsscraper.main:run"
train = "newsscraper.main:train"
replay = "newsscraper.main:replay"
test = "newsscraper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
